Fix - Gutenberg alignment issue on blog page

--- a/style.css
+++ b/style.css
@@ -1282,6 +1282,7 @@ h3#site-title {
 .no-sidebar .alignfull {
 	margin-left: calc(50% - 50vw);
 	margin-right: calc(50% - 50vw);
+	max-width: unset;
 }
 
 .no-sidebar-full-width .alignwide,
